🚀 adding basic structure

--- a/timetab/public/locales/ar/translation.json
+++ b/timetab/public/locales/ar/translation.json
@@ -8,5 +8,5 @@
       "remainingDaylight": "Amanecer en {{h_to_sunrise}}h {{m_to_sunrise}}m",
       "sunriseIn": "Quedan {{h_to_sunset}}h {{m_to_sunset}}m de sol."
     },
-    "itis" : "Son las"
+    "photoBy" : "Foto de"
 }
