--- a/timetab/public/locales/ar/translation.json
+++ b/timetab/public/locales/ar/translation.json
@@ -2,7 +2,8 @@
     "settings": {
       "settings":"Ajustes",
       "theme": "Tema",
-      "language": "Idioma"
+      "language": "Idioma",
+      "location": "Ubicación"
     },
     "themes" : {
       "default": "Variado",
