--- a/timetab/public/locales/de/translation.json
+++ b/timetab/public/locales/de/translation.json
@@ -2,7 +2,8 @@
     "settings": {
       "settings":"Einstellungen",
       "theme": "Theme",
-      "language": "Sprache"
+      "language": "Sprache",
+      "location": "Standort"
     },
     "themes" : {
       "default": "Mix",
