--- a/timetab/public/locales/en/translation.json
+++ b/timetab/public/locales/en/translation.json
@@ -2,7 +2,8 @@
     "settings": {
       "settings":"Settings",
       "theme": "Theme",
-      "language": "Language"
+      "language": "Language",
+      "location": "Location"
     },
     "themes" : {
       "default": "Mix",
