--- a/timetab/public/locales/en/translation.json
+++ b/timetab/public/locales/en/translation.json
@@ -4,6 +4,9 @@
       "theme": "Theme",
       "language": "Language",
       "location": "Location",
+      "latitude":"Latitude",
+      "longitude":"Longitude",
+      "autodetect":"Autodetect",
       "pleaseShareLocation" : "Please share your <1 target='_blank' href='https://support.google.com/chrome/answer/142065'>location</1>"
     },
     "themes" : {
@@ -14,8 +17,8 @@
       "dark": "Dark"
     },
     "sunhours": {
-      "remainingDaylight": "Sunrise in {{h_to_sunrise}}h {{m_to_sunrise}}m",
-      "sunriseIn": "Remaining daylight {{h_to_sunset}}h {{m_to_sunset}}m."
+      "beforeSunset": "Sunset in <1 className='sun-hours__info-minutes'>{{minutes}}</1> minutes",
+      "beforeSunrise": "Sunrise in <1 className='sun-hours__info-minutes'>{{minutes}}</1> minutes"
     },
     "photoBy" : "Photo by"
 }
